; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_bba.c_bba_outsnoselect.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_bba.c_bba_outsnoselect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXI_CHANNEL_0 = common dso_local global i32 0, align 4
@EXI_WRITE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i32)* @bba_outsnoselect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bba_outsnoselect(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = shl i32 %8, 8
  %10 = or i32 %9, -1073741824
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* @EXI_CHANNEL_0, align 4
  %12 = load i32, i32* @EXI_WRITE, align 4
  %13 = call i32 @EXI_Imm(i32 %11, i32* %7, i32 4, i32 %12, i32* null)
  %14 = load i32, i32* @EXI_CHANNEL_0, align 4
  %15 = call i32 @EXI_Sync(i32 %14)
  %16 = load i32, i32* @EXI_CHANNEL_0, align 4
  %17 = load i8*, i8** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* @EXI_WRITE, align 4
  %20 = call i32 @EXI_ImmEx(i32 %16, i8* %17, i32 %18, i32 %19)
  ret void
}

declare dso_local i32 @EXI_Imm(i32, i32*, i32, i32, i32*) #1

declare dso_local i32 @EXI_Sync(i32) #1

declare dso_local i32 @EXI_ImmEx(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
